// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`medusa-plugin-sendgrid claim shipment created data 1`] = `
Object {
  "claim": Object {
    "canceled_at": null,
    "created_at": Any<Date>,
    "deleted_at": null,
    "fulfillment_status": "shipped",
    "id": Any<String>,
    "idempotency_key": Any<String>,
    "metadata": null,
    "no_notification": null,
    "order": Object {
      "billing_address_id": null,
      "canceled_at": null,
      "cart_id": null,
      "created_at": Any<Date>,
      "currency_code": "usd",
      "customer_id": Any<String>,
      "display_id": Any<Number>,
      "draft_order_id": null,
      "email": "test@testson.com",
      "external_id": null,
      "fulfillment_status": "fulfilled",
      "id": Any<String>,
      "idempotency_key": null,
      "items": Array [
        Object {
          "allow_discounts": true,
          "cart_id": null,
          "claim_order_id": null,
          "created_at": Any<Date>,
          "description": "",
          "fulfilled_quantity": 2,
          "has_shipping": null,
          "id": Any<String>,
          "is_giftcard": false,
          "is_return": false,
          "metadata": null,
          "order_id": Any<String>,
          "quantity": 2,
          "returned_quantity": null,
          "shipped_quantity": 2,
          "should_merge": true,
          "swap_id": null,
          "thumbnail": "",
          "title": "Intelligent Plastic Chips",
          "unit_price": 1000,
          "updated_at": Any<Date>,
          "variant": Object {
            "allow_backorder": false,
            "barcode": null,
            "created_at": Any<Date>,
            "deleted_at": null,
            "ean": null,
            "height": null,
            "hs_code": null,
            "id": "test-variant",
            "inventory_quantity": 10,
            "length": null,
            "manage_inventory": true,
            "material": null,
            "metadata": null,
            "mid_code": null,
            "origin_country": null,
            "product": Object {
              "collection_id": null,
              "created_at": Any<Date>,
              "deleted_at": null,
              "description": null,
              "discountable": true,
              "external_id": null,
              "handle": null,
              "height": null,
              "hs_code": null,
              "id": "test-product",
              "is_giftcard": false,
              "length": null,
              "material": null,
              "metadata": null,
              "mid_code": null,
              "origin_country": null,
              "profile_id": Any<String>,
              "status": "draft",
              "subtitle": null,
              "thumbnail": null,
              "title": "Awesome Metal Ball",
              "type_id": null,
              "updated_at": Any<Date>,
              "weight": null,
              "width": null,
            },
            "product_id": "test-product",
            "sku": null,
            "title": "Practical Granite Pizza",
            "upc": null,
            "updated_at": Any<Date>,
            "weight": null,
            "width": null,
          },
          "variant_id": "test-variant",
        },
      ],
      "metadata": null,
      "no_notification": null,
      "object": "order",
      "payment_status": "captured",
      "region_id": "test-region",
      "shipping_address": Object {
        "address_1": "84185 Lindsey Centers",
        "address_2": null,
        "city": null,
        "company": null,
        "country_code": "us",
        "created_at": Any<Date>,
        "customer_id": null,
        "deleted_at": null,
        "first_name": "Chyna",
        "id": Any<String>,
        "last_name": "Osinski",
        "metadata": null,
        "phone": null,
        "postal_code": "51510",
        "province": null,
        "updated_at": Any<Date>,
      },
      "shipping_address_id": Any<String>,
      "status": "pending",
      "tax_rate": null,
      "updated_at": Any<Date>,
    },
    "order_id": Any<String>,
    "payment_status": "na",
    "refund_amount": null,
    "shipping_address_id": Any<String>,
    "type": "replace",
    "updated_at": Any<Date>,
  },
  "email": "test@testson.com",
  "fulfillment": Object {
    "canceled_at": null,
    "claim_order_id": Any<String>,
    "created_at": Any<Date>,
    "data": Object {},
    "id": Any<String>,
    "idempotency_key": null,
    "items": Array [
      Object {
        "fulfillment_id": Any<String>,
        "item_id": Any<String>,
        "quantity": 1,
      },
    ],
    "metadata": Object {},
    "no_notification": null,
    "order_id": null,
    "provider_id": "test-ful",
    "shipped_at": Any<Date>,
    "swap_id": null,
    "tracking_links": Array [],
    "tracking_numbers": Array [],
    "updated_at": Any<Date>,
  },
  "locale": null,
  "order": Object {
    "billing_address_id": null,
    "canceled_at": null,
    "cart_id": null,
    "created_at": Any<Date>,
    "currency_code": "usd",
    "customer_id": Any<String>,
    "display_id": Any<Number>,
    "draft_order_id": null,
    "email": "test@testson.com",
    "external_id": null,
    "fulfillment_status": "fulfilled",
    "id": Any<String>,
    "idempotency_key": null,
    "items": Array [
      Object {
        "allow_discounts": true,
        "cart_id": null,
        "claim_order_id": null,
        "created_at": Any<Date>,
        "description": "",
        "fulfilled_quantity": 2,
        "has_shipping": null,
        "id": Any<String>,
        "is_giftcard": false,
        "is_return": false,
        "metadata": null,
        "order_id": Any<String>,
        "quantity": 2,
        "returned_quantity": null,
        "shipped_quantity": 2,
        "should_merge": true,
        "swap_id": null,
        "thumbnail": "",
        "title": "Intelligent Plastic Chips",
        "unit_price": 1000,
        "updated_at": Any<Date>,
        "variant": Object {
          "allow_backorder": false,
          "barcode": null,
          "created_at": Any<Date>,
          "deleted_at": null,
          "ean": null,
          "height": null,
          "hs_code": null,
          "id": "test-variant",
          "inventory_quantity": 10,
          "length": null,
          "manage_inventory": true,
          "material": null,
          "metadata": null,
          "mid_code": null,
          "origin_country": null,
          "product": Object {
            "collection_id": null,
            "created_at": Any<Date>,
            "deleted_at": null,
            "description": null,
            "discountable": true,
            "external_id": null,
            "handle": null,
            "height": null,
            "hs_code": null,
            "id": "test-product",
            "is_giftcard": false,
            "length": null,
            "material": null,
            "metadata": null,
            "mid_code": null,
            "origin_country": null,
            "profile_id": Any<String>,
            "status": "draft",
            "subtitle": null,
            "thumbnail": null,
            "title": "Awesome Metal Ball",
            "type_id": null,
            "updated_at": Any<Date>,
            "weight": null,
            "width": null,
          },
          "product_id": "test-product",
          "sku": null,
          "title": "Practical Granite Pizza",
          "upc": null,
          "updated_at": Any<Date>,
          "weight": null,
          "width": null,
        },
        "variant_id": "test-variant",
      },
    ],
    "metadata": null,
    "no_notification": null,
    "object": "order",
    "payment_status": "captured",
    "region_id": "test-region",
    "shipping_address": Object {
      "address_1": "84185 Lindsey Centers",
      "address_2": null,
      "city": null,
      "company": null,
      "country_code": "us",
      "created_at": Any<Date>,
      "customer_id": null,
      "deleted_at": null,
      "first_name": "Chyna",
      "id": Any<String>,
      "last_name": "Osinski",
      "metadata": null,
      "phone": null,
      "postal_code": "51510",
      "province": null,
      "updated_at": Any<Date>,
    },
    "shipping_address_id": Any<String>,
    "status": "pending",
    "tax_rate": null,
    "updated_at": Any<Date>,
  },
  "tracking_links": Array [],
  "tracking_number": "",
}
`;

exports[`medusa-plugin-sendgrid items returned data 1`] = `
Object {
  "date": Any<String>,
  "email": "test@testson.com",
  "has_shipping": false,
  "items": Array [
    Object {
      "allow_discounts": true,
      "cart_id": null,
      "claim_order_id": null,
      "created_at": Any<Date>,
      "description": "",
      "fulfilled_quantity": 2,
      "has_shipping": null,
      "id": Any<String>,
      "is_giftcard": false,
      "is_return": false,
      "metadata": null,
      "order_id": Any<String>,
      "price": "12.00 USD",
      "quantity": 1,
      "returned_quantity": 1,
      "shipped_quantity": 2,
      "should_merge": true,
      "swap_id": null,
      "tax_lines": Array [
        Object {
          "code": "default",
          "created_at": Any<Date>,
          "id": Any<String>,
          "item_id": "test-item",
          "metadata": null,
          "name": "default",
          "rate": 20,
          "updated_at": Any<Date>,
        },
      ],
      "thumbnail": null,
      "title": "Intelligent Plastic Chips",
      "totals": Object {
        "discount_total": 0,
        "gift_card_total": 0,
        "original_tax_total": 200,
        "original_total": 1200,
        "quantity": 1,
        "subtotal": 1000,
        "tax_lines": Array [
          Object {
            "code": "default",
            "created_at": Any<Date>,
            "id": Any<String>,
            "item_id": "test-item",
            "metadata": null,
            "name": "default",
            "rate": 20,
            "updated_at": Any<Date>,
          },
        ],
        "tax_total": 200,
        "total": 1200,
        "unit_price": 1000,
      },
      "unit_price": 1000,
      "updated_at": Any<Date>,
      "variant": Object {
        "allow_backorder": false,
        "barcode": null,
        "created_at": Any<Date>,
        "deleted_at": null,
        "ean": null,
        "height": null,
        "hs_code": null,
        "id": "test-variant",
        "inventory_quantity": 11,
        "length": null,
        "manage_inventory": true,
        "material": null,
        "metadata": null,
        "mid_code": null,
        "origin_country": null,
        "product": Object {
          "collection_id": null,
          "created_at": Any<Date>,
          "deleted_at": null,
          "description": null,
          "discountable": true,
          "external_id": null,
          "handle": null,
          "height": null,
          "hs_code": null,
          "id": "test-product",
          "is_giftcard": false,
          "length": null,
          "material": null,
          "metadata": null,
          "mid_code": null,
          "origin_country": null,
          "profile_id": Any<String>,
          "status": "draft",
          "subtitle": null,
          "thumbnail": null,
          "title": "Awesome Metal Ball",
          "type_id": null,
          "updated_at": Any<Date>,
          "weight": null,
          "width": null,
        },
        "product_id": "test-product",
        "sku": null,
        "title": "Practical Granite Pizza",
        "upc": null,
        "updated_at": Any<Date>,
        "weight": null,
        "width": null,
      },
      "variant_id": "test-variant",
    },
  ],
  "locale": null,
  "order": Object {
    "beforeInsert": [Function],
    "billing_address_id": null,
    "canceled_at": null,
    "cart_id": null,
    "claims": Array [],
    "created_at": Any<Date>,
    "currency_code": "usd",
    "customer_id": Any<String>,
    "discounts": Array [],
    "display_id": Any<Number>,
    "draft_order_id": null,
    "email": "test@testson.com",
    "external_id": null,
    "fulfillment_status": "requires_action",
    "gift_card_transactions": Array [],
    "gift_cards": Array [],
    "id": Any<String>,
    "idempotency_key": null,
    "items": Array [
      Object {
        "allow_discounts": true,
        "cart_id": null,
        "claim_order_id": null,
        "created_at": Any<Date>,
        "description": "",
        "fulfilled_quantity": 2,
        "has_shipping": null,
        "id": Any<String>,
        "is_giftcard": false,
        "is_return": false,
        "metadata": null,
        "order_id": Any<String>,
        "quantity": 2,
        "returned_quantity": 1,
        "shipped_quantity": 2,
        "should_merge": true,
        "swap_id": null,
        "tax_lines": Array [
          Object {
            "code": "default",
            "created_at": Any<Date>,
            "id": Any<String>,
            "item_id": "test-item",
            "metadata": null,
            "name": "default",
            "rate": 20,
            "updated_at": Any<Date>,
          },
        ],
        "thumbnail": "",
        "title": "Intelligent Plastic Chips",
        "unit_price": 1000,
        "updated_at": Any<Date>,
        "variant": Object {
          "allow_backorder": false,
          "barcode": null,
          "created_at": Any<Date>,
          "deleted_at": null,
          "ean": null,
          "height": null,
          "hs_code": null,
          "id": "test-variant",
          "inventory_quantity": 11,
          "length": null,
          "manage_inventory": true,
          "material": null,
          "metadata": null,
          "mid_code": null,
          "origin_country": null,
          "product": Object {
            "collection_id": null,
            "created_at": Any<Date>,
            "deleted_at": null,
            "description": null,
            "discountable": true,
            "external_id": null,
            "handle": null,
            "height": null,
            "hs_code": null,
            "id": "test-product",
            "is_giftcard": false,
            "length": null,
            "material": null,
            "metadata": null,
            "mid_code": null,
            "origin_country": null,
            "profile_id": Any<String>,
            "status": "draft",
            "subtitle": null,
            "thumbnail": null,
            "title": "Awesome Metal Ball",
            "type_id": null,
            "updated_at": Any<Date>,
            "weight": null,
            "width": null,
          },
          "product_id": "test-product",
          "sku": null,
          "title": "Practical Granite Pizza",
          "upc": null,
          "updated_at": Any<Date>,
          "weight": null,
          "width": null,
        },
        "variant_id": "test-variant",
      },
    ],
    "metadata": null,
    "no_notification": null,
    "object": "order",
    "payment_status": "captured",
    "refunds": Array [],
    "region": Object {
      "automatic_taxes": true,
      "created_at": Any<Date>,
      "currency_code": "usd",
      "deleted_at": null,
      "fulfillment_providers": Array [],
      "gift_cards_taxable": true,
      "id": Any<String>,
      "metadata": null,
      "name": "Test region",
      "payment_providers": Array [
        PaymentProvider {
          "id": "test-pay",
          "is_installed": true,
        },
      ],
      "tax_code": null,
      "tax_provider_id": null,
      "tax_rate": 12.5,
      "updated_at": Any<Date>,
    },
    "region_id": "test-region",
    "returns": Array [
      Object {
        "claim_order_id": null,
        "created_at": Any<Date>,
        "id": Any<String>,
        "idempotency_key": Any<String>,
        "items": Array [
          Object {
            "is_requested": true,
            "item_id": "test-item",
            "metadata": null,
            "note": null,
            "quantity": 1,
            "reason_id": null,
            "received_quantity": null,
            "requested_quantity": 1,
            "return_id": Any<String>,
          },
        ],
        "metadata": null,
        "no_notification": null,
        "order_id": Any<String>,
        "received_at": Any<Date>,
        "refund_amount": 1200,
        "shipping_data": null,
        "status": "received",
        "swap_id": null,
        "updated_at": Any<Date>,
      },
    ],
    "shipping_address": Object {
      "address_1": "84185 Lindsey Centers",
      "address_2": null,
      "city": null,
      "company": null,
      "country_code": "us",
      "created_at": Any<Date>,
      "customer_id": null,
      "deleted_at": null,
      "first_name": "Chyna",
      "id": Any<String>,
      "last_name": "Osinski",
      "metadata": null,
      "phone": null,
      "postal_code": "51510",
      "province": null,
      "updated_at": Any<Date>,
    },
    "shipping_address_id": Any<String>,
    "shipping_methods": Array [],
    "status": "pending",
    "swaps": Array [],
    "tax_rate": null,
    "total": 2400,
    "updated_at": Any<Date>,
  },
  "refund_amount": "12.00 USD",
  "return_request": Object {
    "claim_order_id": null,
    "created_at": Any<Date>,
    "id": Any<String>,
    "idempotency_key": Any<String>,
    "items": Array [
      Object {
        "is_requested": true,
        "item": Object {
          "allow_discounts": true,
          "cart_id": null,
          "claim_order_id": null,
          "created_at": Any<Date>,
          "description": "",
          "fulfilled_quantity": 2,
          "has_shipping": null,
          "id": Any<String>,
          "is_giftcard": false,
          "is_return": false,
          "metadata": null,
          "order_id": Any<String>,
          "quantity": 2,
          "returned_quantity": 1,
          "shipped_quantity": 2,
          "should_merge": true,
          "swap_id": null,
          "tax_lines": Array [
            Object {
              "code": "default",
              "created_at": Any<Date>,
              "id": Any<String>,
              "item_id": "test-item",
              "metadata": null,
              "name": "default",
              "rate": 20,
              "updated_at": Any<Date>,
            },
          ],
          "thumbnail": "",
          "title": "Intelligent Plastic Chips",
          "unit_price": 1000,
          "updated_at": Any<Date>,
          "variant": Object {
            "allow_backorder": false,
            "barcode": null,
            "created_at": Any<Date>,
            "deleted_at": null,
            "ean": null,
            "height": null,
            "hs_code": null,
            "id": "test-variant",
            "inventory_quantity": 11,
            "length": null,
            "manage_inventory": true,
            "material": null,
            "metadata": null,
            "mid_code": null,
            "origin_country": null,
            "product": Object {
              "collection_id": null,
              "created_at": Any<Date>,
              "deleted_at": null,
              "description": null,
              "discountable": true,
              "external_id": null,
              "handle": null,
              "height": null,
              "hs_code": null,
              "id": "test-product",
              "is_giftcard": false,
              "length": null,
              "material": null,
              "metadata": null,
              "mid_code": null,
              "origin_country": null,
              "profile_id": Any<String>,
              "status": "draft",
              "subtitle": null,
              "thumbnail": null,
              "title": "Awesome Metal Ball",
              "type_id": null,
              "updated_at": Any<Date>,
              "weight": null,
              "width": null,
            },
            "product_id": "test-product",
            "sku": null,
            "title": "Practical Granite Pizza",
            "upc": null,
            "updated_at": Any<Date>,
            "weight": null,
            "width": null,
          },
          "variant_id": "test-variant",
        },
        "item_id": "test-item",
        "metadata": null,
        "note": null,
        "quantity": 1,
        "reason_id": null,
        "received_quantity": null,
        "requested_quantity": 1,
        "return_id": Any<String>,
      },
    ],
    "metadata": null,
    "no_notification": null,
    "order_id": Any<String>,
    "received_at": Any<Date>,
    "refund_amount": "12.00 USD",
    "shipping_data": null,
    "shipping_method": null,
    "status": "received",
    "swap_id": null,
    "updated_at": Any<Date>,
  },
  "shipping_total": "0.00 USD",
  "subtotal": "12.00 USD",
}
`;

exports[`medusa-plugin-sendgrid order canceled data 1`] = `
Object {
  "beforeInsert": [Function],
  "billing_address": null,
  "billing_address_id": null,
  "canceled_at": Any<Date>,
  "cart_id": null,
  "claims": Array [],
  "created_at": Any<Date>,
  "currency_code": "usd",
  "customer": Object {
    "billing_address_id": null,
    "created_at": Any<Date>,
    "deleted_at": null,
    "email": "test@testson.com",
    "first_name": null,
    "has_account": false,
    "id": Any<String>,
    "last_name": null,
    "metadata": null,
    "phone": null,
    "updated_at": Any<Date>,
  },
  "customer_id": Any<String>,
  "date": Any<String>,
  "discount_total": "0.00 USD",
  "discounts": Array [],
  "display_id": Any<Number>,
  "draft_order_id": null,
  "email": "test@testson.com",
  "external_id": null,
  "fulfillment_status": "canceled",
  "fulfillments": Array [],
  "gift_card_total": "0.00 USD",
  "gift_card_transactions": Array [],
  "gift_cards": Array [],
  "has_discounts": 0,
  "has_gift_cards": 0,
  "id": Any<String>,
  "idempotency_key": null,
  "items": Array [
    Object {
      "allow_discounts": true,
      "cart_id": null,
      "claim_order_id": null,
      "created_at": Any<Date>,
      "description": "",
      "fulfilled_quantity": null,
      "has_shipping": null,
      "id": "test-item",
      "is_giftcard": false,
      "is_return": false,
      "metadata": null,
      "order_id": Any<String>,
      "price": "10.00 USD",
      "quantity": 2,
      "returned_quantity": null,
      "shipped_quantity": null,
      "should_merge": true,
      "swap_id": null,
      "tax_lines": Array [
        Object {
          "code": "default",
          "created_at": Any<Date>,
          "id": Any<String>,
          "item_id": "test-item",
          "metadata": null,
          "name": "default",
          "rate": 20,
          "updated_at": Any<Date>,
        },
      ],
      "thumbnail": null,
      "title": "Intelligent Plastic Chips",
      "unit_price": 1000,
      "updated_at": Any<Date>,
      "variant": Object {
        "allow_backorder": false,
        "barcode": null,
        "created_at": Any<Date>,
        "deleted_at": null,
        "ean": null,
        "height": null,
        "hs_code": null,
        "id": "test-variant",
        "inventory_quantity": 12,
        "length": null,
        "manage_inventory": true,
        "material": null,
        "metadata": null,
        "mid_code": null,
        "origin_country": null,
        "product": Object {
          "collection_id": null,
          "created_at": Any<Date>,
          "deleted_at": null,
          "description": null,
          "discountable": true,
          "external_id": null,
          "handle": null,
          "height": null,
          "hs_code": null,
          "id": "test-product",
          "is_giftcard": false,
          "length": null,
          "material": null,
          "metadata": null,
          "mid_code": null,
          "origin_country": null,
          "profile_id": Any<String>,
          "status": "draft",
          "subtitle": null,
          "thumbnail": null,
          "title": "Awesome Metal Ball",
          "type_id": null,
          "updated_at": Any<Date>,
          "weight": null,
          "width": null,
        },
        "product_id": "test-product",
        "sku": null,
        "title": "Practical Granite Pizza",
        "upc": null,
        "updated_at": Any<Date>,
        "weight": null,
        "width": null,
      },
      "variant_id": "test-variant",
    },
  ],
  "locale": null,
  "metadata": null,
  "no_notification": null,
  "object": "order",
  "payment_status": "canceled",
  "payments": Array [],
  "refunded_total": 0,
  "refunds": Array [],
  "region": Object {
    "automatic_taxes": true,
    "created_at": Any<Date>,
    "currency_code": "usd",
    "deleted_at": null,
    "fulfillment_providers": Array [],
    "gift_cards_taxable": true,
    "id": "test-region",
    "metadata": null,
    "name": "Test region",
    "payment_providers": Array [
      PaymentProvider {
        "id": "test-pay",
        "is_installed": true,
      },
    ],
    "tax_code": null,
    "tax_provider_id": null,
    "tax_rate": 12.5,
    "updated_at": Any<Date>,
  },
  "region_id": "test-region",
  "returns": Array [],
  "shipping_address": Object {
    "address_1": "84185 Lindsey Centers",
    "address_2": null,
    "city": null,
    "company": null,
    "country_code": "us",
    "created_at": Any<Date>,
    "customer_id": null,
    "deleted_at": null,
    "first_name": "Chyna",
    "id": Any<String>,
    "last_name": "Osinski",
    "metadata": null,
    "phone": null,
    "postal_code": "51510",
    "province": null,
    "updated_at": Any<Date>,
  },
  "shipping_address_id": Any<String>,
  "shipping_methods": Array [
    Object {
      "cart_id": null,
      "claim_order_id": null,
      "data": Object {},
      "id": Any<String>,
      "order_id": Any<String>,
      "price": 0,
      "return_id": null,
      "shipping_option": Object {
        "admin_only": false,
        "amount": 500,
        "created_at": Any<Date>,
        "data": Object {},
        "deleted_at": null,
        "id": Any<String>,
        "is_return": false,
        "metadata": null,
        "name": "free",
        "price_type": "flat_rate",
        "profile_id": Any<String>,
        "provider_id": "test-ful",
        "region_id": "test-region",
        "updated_at": Any<Date>,
      },
      "shipping_option_id": Any<String>,
      "swap_id": null,
      "tax_lines": Array [],
    },
  ],
  "shipping_total": "0.00 USD",
  "status": "canceled",
  "subtotal": "20.00 USD",
  "swaps": Array [],
  "tax_rate": null,
  "tax_total": "4.00 USD",
  "total": "24.00 USD",
  "updated_at": Any<Date>,
}
`;

exports[`medusa-plugin-sendgrid order placed data 1`] = `
Object {
  "beforeInsert": [Function],
  "billing_address": null,
  "billing_address_id": null,
  "canceled_at": null,
  "cart_id": null,
  "claims": Array [],
  "created_at": Any<Date>,
  "currency_code": "usd",
  "customer": Object {
    "billing_address_id": null,
    "created_at": Any<Date>,
    "deleted_at": null,
    "email": "test@testson.com",
    "first_name": null,
    "has_account": false,
    "id": Any<String>,
    "last_name": null,
    "metadata": null,
    "phone": null,
    "updated_at": Any<Date>,
  },
  "customer_id": Any<String>,
  "date": Any<String>,
  "discount_total": "0.00 USD",
  "discounts": Array [],
  "display_id": Any<Number>,
  "draft_order_id": null,
  "email": "test@testson.com",
  "external_id": null,
  "fulfillment_status": "fulfilled",
  "fulfillments": Array [],
  "gift_card_total": "0.00 USD",
  "gift_card_transactions": Array [],
  "gift_cards": Array [],
  "has_discounts": 0,
  "has_gift_cards": 0,
  "id": Any<String>,
  "idempotency_key": null,
  "items": Array [
    Object {
      "allow_discounts": true,
      "cart_id": null,
      "claim_order_id": null,
      "created_at": Any<Date>,
      "description": "",
      "discounted_price": "12.00 USD",
      "fulfilled_quantity": 2,
      "has_shipping": null,
      "id": "test-item",
      "is_giftcard": false,
      "is_return": false,
      "metadata": null,
      "order_id": Any<String>,
      "price": "12.00 USD",
      "quantity": 2,
      "returned_quantity": null,
      "shipped_quantity": 2,
      "should_merge": true,
      "swap_id": null,
      "tax_lines": Array [
        Object {
          "code": "default",
          "created_at": Any<Date>,
          "id": Any<String>,
          "item_id": "test-item",
          "metadata": null,
          "name": "default",
          "rate": 20,
          "updated_at": Any<Date>,
        },
      ],
      "thumbnail": null,
      "title": "Intelligent Plastic Chips",
      "totals": Object {
        "discount_total": 0,
        "gift_card_total": 0,
        "original_tax_total": 400,
        "original_total": 2400,
        "quantity": 2,
        "subtotal": 2000,
        "tax_lines": Array [
          Object {
            "code": "default",
            "created_at": Any<Date>,
            "id": Any<String>,
            "item_id": "test-item",
            "metadata": null,
            "name": "default",
            "rate": 20,
            "updated_at": Any<Date>,
          },
        ],
        "tax_total": 400,
        "total": 2400,
        "unit_price": 1000,
      },
      "unit_price": 1000,
      "updated_at": Any<Date>,
      "variant": Object {
        "allow_backorder": false,
        "barcode": null,
        "created_at": Any<Date>,
        "deleted_at": null,
        "ean": null,
        "height": null,
        "hs_code": null,
        "id": "test-variant",
        "inventory_quantity": 10,
        "length": null,
        "manage_inventory": true,
        "material": null,
        "metadata": null,
        "mid_code": null,
        "origin_country": null,
        "product": Object {
          "collection_id": null,
          "created_at": Any<Date>,
          "deleted_at": null,
          "description": null,
          "discountable": true,
          "external_id": null,
          "handle": null,
          "height": null,
          "hs_code": null,
          "id": "test-product",
          "is_giftcard": false,
          "length": null,
          "material": null,
          "metadata": null,
          "mid_code": null,
          "origin_country": null,
          "profile_id": Any<String>,
          "status": "draft",
          "subtitle": null,
          "thumbnail": null,
          "title": "Awesome Metal Ball",
          "type_id": null,
          "updated_at": Any<Date>,
          "weight": null,
          "width": null,
        },
        "product_id": "test-product",
        "sku": null,
        "title": "Practical Granite Pizza",
        "upc": null,
        "updated_at": Any<Date>,
        "weight": null,
        "width": null,
      },
      "variant_id": "test-variant",
    },
  ],
  "locale": null,
  "metadata": null,
  "no_notification": null,
  "object": "order",
  "payment_status": "captured",
  "payments": Array [],
  "refunded_total": 0,
  "refunds": Array [],
  "region": Object {
    "automatic_taxes": true,
    "created_at": Any<Date>,
    "currency_code": "usd",
    "deleted_at": null,
    "fulfillment_providers": Array [],
    "gift_cards_taxable": true,
    "id": "test-region",
    "metadata": null,
    "name": "Test region",
    "payment_providers": Array [
      PaymentProvider {
        "id": "test-pay",
        "is_installed": true,
      },
    ],
    "tax_code": null,
    "tax_provider_id": null,
    "tax_rate": 12.5,
    "updated_at": Any<Date>,
  },
  "region_id": "test-region",
  "returns": Array [],
  "shipping_address": Object {
    "address_1": "84185 Lindsey Centers",
    "address_2": null,
    "city": null,
    "company": null,
    "country_code": "us",
    "created_at": Any<Date>,
    "customer_id": null,
    "deleted_at": null,
    "first_name": "Chyna",
    "id": Any<String>,
    "last_name": "Osinski",
    "metadata": null,
    "phone": null,
    "postal_code": "51510",
    "province": null,
    "updated_at": Any<Date>,
  },
  "shipping_address_id": Any<String>,
  "shipping_methods": Array [],
  "shipping_total": "0.00 USD",
  "status": "pending",
  "subtotal": "24.00 USD",
  "subtotal_ex_tax": "20.00 USD",
  "swaps": Array [],
  "tax_rate": null,
  "tax_total": "4.00 USD",
  "total": "24.00 USD",
  "updated_at": Any<Date>,
}
`;

exports[`medusa-plugin-sendgrid order shipment created data 1`] = `
Object {
  "date": Any<String>,
  "email": "test@testson.com",
  "fulfillment": Object {
    "canceled_at": null,
    "claim_order_id": null,
    "created_at": Any<Date>,
    "data": Object {},
    "id": Any<String>,
    "idempotency_key": null,
    "items": Array [
      Object {
        "fulfillment_id": Any<String>,
        "item_id": "test-item",
        "quantity": 2,
      },
    ],
    "metadata": Object {},
    "no_notification": null,
    "order_id": Any<String>,
    "provider_id": "test-ful",
    "shipped_at": Any<Date>,
    "swap_id": null,
    "tracking_links": Array [],
    "tracking_numbers": Array [],
    "updated_at": Any<Date>,
  },
  "locale": null,
  "order": Object {
    "beforeInsert": [Function],
    "billing_address": null,
    "billing_address_id": null,
    "canceled_at": null,
    "cart_id": null,
    "claims": Array [],
    "created_at": Any<Date>,
    "currency_code": "usd",
    "customer": Object {
      "billing_address_id": null,
      "created_at": Any<Date>,
      "deleted_at": null,
      "email": "test@testson.com",
      "first_name": null,
      "has_account": false,
      "id": Any<String>,
      "last_name": null,
      "metadata": null,
      "phone": null,
      "updated_at": Any<Date>,
    },
    "customer_id": Any<String>,
    "discount_total": 0,
    "discounts": Array [],
    "display_id": Any<Number>,
    "draft_order_id": null,
    "email": "test@testson.com",
    "external_id": null,
    "fulfillment_status": "shipped",
    "fulfillments": Array [
      Object {
        "canceled_at": null,
        "claim_order_id": null,
        "created_at": Any<Date>,
        "data": Object {},
        "id": Any<String>,
        "idempotency_key": null,
        "items": Array [
          Object {
            "fulfillment_id": Any<String>,
            "item_id": "test-item",
            "quantity": 2,
          },
        ],
        "metadata": Object {},
        "no_notification": null,
        "order_id": Any<String>,
        "provider_id": "test-ful",
        "shipped_at": Any<Date>,
        "swap_id": null,
        "tracking_numbers": Array [],
        "updated_at": Any<Date>,
      },
    ],
    "gift_card_total": 0,
    "gift_card_transactions": Array [],
    "gift_cards": Array [],
    "id": Any<String>,
    "idempotency_key": null,
    "items": Array [
      Object {
        "allow_discounts": true,
        "cart_id": null,
        "claim_order_id": null,
        "created_at": Any<Date>,
        "description": "",
        "fulfilled_quantity": 2,
        "has_shipping": null,
        "id": "test-item",
        "is_giftcard": false,
        "is_return": false,
        "metadata": null,
        "order_id": Any<String>,
        "quantity": 2,
        "returned_quantity": null,
        "shipped_quantity": 2,
        "should_merge": true,
        "swap_id": null,
        "tax_lines": Array [
          Object {
            "code": "default",
            "created_at": Any<Date>,
            "id": Any<String>,
            "item_id": "test-item",
            "metadata": null,
            "name": "default",
            "rate": 20,
            "updated_at": Any<Date>,
          },
        ],
        "thumbnail": "",
        "title": "Intelligent Plastic Chips",
        "unit_price": 1000,
        "updated_at": Any<Date>,
        "variant": Object {
          "allow_backorder": false,
          "barcode": null,
          "created_at": Any<Date>,
          "deleted_at": null,
          "ean": null,
          "height": null,
          "hs_code": null,
          "id": "test-variant",
          "inventory_quantity": 10,
          "length": null,
          "manage_inventory": true,
          "material": null,
          "metadata": null,
          "mid_code": null,
          "origin_country": null,
          "product": Object {
            "collection_id": null,
            "created_at": Any<Date>,
            "deleted_at": null,
            "description": null,
            "discountable": true,
            "external_id": null,
            "handle": null,
            "height": null,
            "hs_code": null,
            "id": "test-product",
            "is_giftcard": false,
            "length": null,
            "material": null,
            "metadata": null,
            "mid_code": null,
            "origin_country": null,
            "profile_id": Any<String>,
            "status": "draft",
            "subtitle": null,
            "thumbnail": null,
            "title": "Awesome Metal Ball",
            "type_id": null,
            "updated_at": Any<Date>,
            "weight": null,
            "width": null,
          },
          "product_id": "test-product",
          "sku": null,
          "title": "Practical Granite Pizza",
          "upc": null,
          "updated_at": Any<Date>,
          "weight": null,
          "width": null,
        },
        "variant_id": "test-variant",
      },
    ],
    "metadata": null,
    "no_notification": null,
    "object": "order",
    "payment_status": "captured",
    "payments": Array [],
    "refundable_amount": 0,
    "refunded_total": 0,
    "refunds": Array [],
    "region": Object {
      "automatic_taxes": true,
      "created_at": Any<Date>,
      "currency_code": "usd",
      "deleted_at": null,
      "fulfillment_providers": Array [],
      "gift_cards_taxable": true,
      "id": "test-region",
      "metadata": null,
      "name": "Test region",
      "payment_providers": Array [
        PaymentProvider {
          "id": "test-pay",
          "is_installed": true,
        },
      ],
      "tax_code": null,
      "tax_provider_id": null,
      "tax_rate": 12.5,
      "updated_at": Any<Date>,
    },
    "region_id": "test-region",
    "returns": Array [],
    "shipping_address": Object {
      "address_1": "84185 Lindsey Centers",
      "address_2": null,
      "city": null,
      "company": null,
      "country_code": "us",
      "created_at": Any<Date>,
      "customer_id": null,
      "deleted_at": null,
      "first_name": "Chyna",
      "id": Any<String>,
      "last_name": "Osinski",
      "metadata": null,
      "phone": null,
      "postal_code": "51510",
      "province": null,
      "updated_at": Any<Date>,
    },
    "shipping_address_id": Any<String>,
    "shipping_methods": Array [
      Object {
        "cart_id": null,
        "claim_order_id": null,
        "data": Object {},
        "id": Any<String>,
        "order_id": Any<String>,
        "price": 0,
        "return_id": null,
        "shipping_option": Object {
          "admin_only": false,
          "amount": 500,
          "created_at": Any<Date>,
          "data": Object {},
          "deleted_at": null,
          "id": Any<String>,
          "is_return": false,
          "metadata": null,
          "name": "free",
          "price_type": "flat_rate",
          "profile_id": Any<String>,
          "provider_id": "test-ful",
          "region_id": "test-region",
          "updated_at": Any<Date>,
        },
        "shipping_option_id": Any<String>,
        "swap_id": null,
        "tax_lines": Array [],
      },
    ],
    "shipping_total": 0,
    "status": "pending",
    "subtotal": 2000,
    "swaps": Array [],
    "tax_rate": null,
    "tax_total": 400,
    "total": 2400,
    "updated_at": Any<Date>,
  },
  "tracking_links": Array [],
  "tracking_number": "",
}
`;

exports[`medusa-plugin-sendgrid return requested data 1`] = `
Object {
  "date": Any<String>,
  "email": "test@testson.com",
  "has_shipping": false,
  "items": Array [
    Object {
      "allow_discounts": true,
      "cart_id": null,
      "claim_order_id": null,
      "created_at": Any<Date>,
      "description": "",
      "fulfilled_quantity": 2,
      "has_shipping": null,
      "id": Any<String>,
      "is_giftcard": false,
      "is_return": false,
      "metadata": null,
      "order_id": Any<String>,
      "price": "12.00 USD",
      "quantity": 1,
      "returned_quantity": null,
      "shipped_quantity": 2,
      "should_merge": true,
      "swap_id": null,
      "tax_lines": Array [
        Object {
          "code": "default",
          "created_at": Any<Date>,
          "id": Any<String>,
          "item_id": "test-item",
          "metadata": null,
          "name": "default",
          "rate": 20,
          "updated_at": Any<Date>,
        },
      ],
      "thumbnail": null,
      "title": "Intelligent Plastic Chips",
      "totals": Object {
        "discount_total": 0,
        "gift_card_total": 0,
        "original_tax_total": 200,
        "original_total": 1200,
        "quantity": 1,
        "subtotal": 1000,
        "tax_lines": Array [
          Object {
            "code": "default",
            "created_at": Any<Date>,
            "id": Any<String>,
            "item_id": "test-item",
            "metadata": null,
            "name": "default",
            "rate": 20,
            "updated_at": Any<Date>,
          },
        ],
        "tax_total": 200,
        "total": 1200,
        "unit_price": 1000,
      },
      "unit_price": 1000,
      "updated_at": Any<Date>,
      "variant": Object {
        "allow_backorder": false,
        "barcode": null,
        "created_at": Any<Date>,
        "deleted_at": null,
        "ean": null,
        "height": null,
        "hs_code": null,
        "id": "test-variant",
        "inventory_quantity": 10,
        "length": null,
        "manage_inventory": true,
        "material": null,
        "metadata": null,
        "mid_code": null,
        "origin_country": null,
        "product": Object {
          "collection_id": null,
          "created_at": Any<Date>,
          "deleted_at": null,
          "description": null,
          "discountable": true,
          "external_id": null,
          "handle": null,
          "height": null,
          "hs_code": null,
          "id": "test-product",
          "is_giftcard": false,
          "length": null,
          "material": null,
          "metadata": null,
          "mid_code": null,
          "origin_country": null,
          "profile_id": Any<String>,
          "status": "draft",
          "subtitle": null,
          "thumbnail": null,
          "title": "Awesome Metal Ball",
          "type_id": null,
          "updated_at": Any<Date>,
          "weight": null,
          "width": null,
        },
        "product_id": "test-product",
        "sku": null,
        "title": "Practical Granite Pizza",
        "upc": null,
        "updated_at": Any<Date>,
        "weight": null,
        "width": null,
      },
      "variant_id": "test-variant",
    },
  ],
  "locale": null,
  "order": Object {
    "beforeInsert": [Function],
    "billing_address_id": null,
    "canceled_at": null,
    "cart_id": null,
    "claims": Array [],
    "created_at": Any<Date>,
    "currency_code": "usd",
    "customer_id": Any<String>,
    "discounts": Array [],
    "display_id": Any<Number>,
    "draft_order_id": null,
    "email": "test@testson.com",
    "external_id": null,
    "fulfillment_status": "fulfilled",
    "gift_card_transactions": Array [],
    "gift_cards": Array [],
    "id": Any<String>,
    "idempotency_key": null,
    "items": Array [
      Object {
        "allow_discounts": true,
        "cart_id": null,
        "claim_order_id": null,
        "created_at": Any<Date>,
        "description": "",
        "fulfilled_quantity": 2,
        "has_shipping": null,
        "id": Any<String>,
        "is_giftcard": false,
        "is_return": false,
        "metadata": null,
        "order_id": Any<String>,
        "quantity": 2,
        "returned_quantity": null,
        "shipped_quantity": 2,
        "should_merge": true,
        "swap_id": null,
        "tax_lines": Array [
          Object {
            "code": "default",
            "created_at": Any<Date>,
            "id": Any<String>,
            "item_id": "test-item",
            "metadata": null,
            "name": "default",
            "rate": 20,
            "updated_at": Any<Date>,
          },
        ],
        "thumbnail": "",
        "title": "Intelligent Plastic Chips",
        "unit_price": 1000,
        "updated_at": Any<Date>,
        "variant": Object {
          "allow_backorder": false,
          "barcode": null,
          "created_at": Any<Date>,
          "deleted_at": null,
          "ean": null,
          "height": null,
          "hs_code": null,
          "id": "test-variant",
          "inventory_quantity": 10,
          "length": null,
          "manage_inventory": true,
          "material": null,
          "metadata": null,
          "mid_code": null,
          "origin_country": null,
          "product": Object {
            "collection_id": null,
            "created_at": Any<Date>,
            "deleted_at": null,
            "description": null,
            "discountable": true,
            "external_id": null,
            "handle": null,
            "height": null,
            "hs_code": null,
            "id": "test-product",
            "is_giftcard": false,
            "length": null,
            "material": null,
            "metadata": null,
            "mid_code": null,
            "origin_country": null,
            "profile_id": Any<String>,
            "status": "draft",
            "subtitle": null,
            "thumbnail": null,
            "title": "Awesome Metal Ball",
            "type_id": null,
            "updated_at": Any<Date>,
            "weight": null,
            "width": null,
          },
          "product_id": "test-product",
          "sku": null,
          "title": "Practical Granite Pizza",
          "upc": null,
          "updated_at": Any<Date>,
          "weight": null,
          "width": null,
        },
        "variant_id": "test-variant",
      },
    ],
    "metadata": null,
    "no_notification": null,
    "object": "order",
    "payment_status": "captured",
    "refunds": Array [],
    "region": Object {
      "automatic_taxes": true,
      "created_at": Any<Date>,
      "currency_code": "usd",
      "deleted_at": null,
      "fulfillment_providers": Array [],
      "gift_cards_taxable": true,
      "id": Any<String>,
      "metadata": null,
      "name": "Test region",
      "payment_providers": Array [
        PaymentProvider {
          "id": "test-pay",
          "is_installed": true,
        },
      ],
      "tax_code": null,
      "tax_provider_id": null,
      "tax_rate": 12.5,
      "updated_at": Any<Date>,
    },
    "region_id": "test-region",
    "returns": Array [
      Object {
        "claim_order_id": null,
        "created_at": Any<Date>,
        "id": Any<String>,
        "idempotency_key": Any<String>,
        "items": Array [
          Object {
            "is_requested": true,
            "item_id": "test-item",
            "metadata": null,
            "note": null,
            "quantity": 1,
            "reason_id": null,
            "received_quantity": null,
            "requested_quantity": 1,
            "return_id": Any<String>,
          },
        ],
        "metadata": null,
        "no_notification": null,
        "order_id": Any<String>,
        "received_at": null,
        "refund_amount": 1200,
        "shipping_data": null,
        "status": "requested",
        "swap_id": null,
        "updated_at": Any<Date>,
      },
    ],
    "shipping_address": Object {
      "address_1": "84185 Lindsey Centers",
      "address_2": null,
      "city": null,
      "company": null,
      "country_code": "us",
      "created_at": Any<Date>,
      "customer_id": null,
      "deleted_at": null,
      "first_name": "Chyna",
      "id": Any<String>,
      "last_name": "Osinski",
      "metadata": null,
      "phone": null,
      "postal_code": "51510",
      "province": null,
      "updated_at": Any<Date>,
    },
    "shipping_address_id": Any<String>,
    "shipping_methods": Array [],
    "status": "pending",
    "swaps": Array [],
    "tax_rate": null,
    "total": 2400,
    "updated_at": Any<Date>,
  },
  "refund_amount": "12.00 USD",
  "return_request": Object {
    "claim_order_id": null,
    "created_at": Any<Date>,
    "id": Any<String>,
    "idempotency_key": Any<String>,
    "items": Array [
      Object {
        "is_requested": true,
        "item": Object {
          "allow_discounts": true,
          "cart_id": null,
          "claim_order_id": null,
          "created_at": Any<Date>,
          "description": "",
          "fulfilled_quantity": 2,
          "has_shipping": null,
          "id": Any<String>,
          "is_giftcard": false,
          "is_return": false,
          "metadata": null,
          "order_id": Any<String>,
          "quantity": 2,
          "returned_quantity": null,
          "shipped_quantity": 2,
          "should_merge": true,
          "swap_id": null,
          "tax_lines": Array [
            Object {
              "code": "default",
              "created_at": Any<Date>,
              "id": Any<String>,
              "item_id": "test-item",
              "metadata": null,
              "name": "default",
              "rate": 20,
              "updated_at": Any<Date>,
            },
          ],
          "thumbnail": "",
          "title": "Intelligent Plastic Chips",
          "unit_price": 1000,
          "updated_at": Any<Date>,
          "variant": Object {
            "allow_backorder": false,
            "barcode": null,
            "created_at": Any<Date>,
            "deleted_at": null,
            "ean": null,
            "height": null,
            "hs_code": null,
            "id": "test-variant",
            "inventory_quantity": 10,
            "length": null,
            "manage_inventory": true,
            "material": null,
            "metadata": null,
            "mid_code": null,
            "origin_country": null,
            "product": Object {
              "collection_id": null,
              "created_at": Any<Date>,
              "deleted_at": null,
              "description": null,
              "discountable": true,
              "external_id": null,
              "handle": null,
              "height": null,
              "hs_code": null,
              "id": "test-product",
              "is_giftcard": false,
              "length": null,
              "material": null,
              "metadata": null,
              "mid_code": null,
              "origin_country": null,
              "profile_id": Any<String>,
              "status": "draft",
              "subtitle": null,
              "thumbnail": null,
              "title": "Awesome Metal Ball",
              "type_id": null,
              "updated_at": Any<Date>,
              "weight": null,
              "width": null,
            },
            "product_id": "test-product",
            "sku": null,
            "title": "Practical Granite Pizza",
            "upc": null,
            "updated_at": Any<Date>,
            "weight": null,
            "width": null,
          },
          "variant_id": "test-variant",
        },
        "item_id": "test-item",
        "metadata": null,
        "note": null,
        "quantity": 1,
        "reason_id": null,
        "received_quantity": null,
        "requested_quantity": 1,
        "return_id": Any<String>,
      },
    ],
    "metadata": null,
    "no_notification": null,
    "order_id": Any<String>,
    "received_at": null,
    "refund_amount": "12.00 USD",
    "shipping_data": null,
    "shipping_method": null,
    "status": "requested",
    "swap_id": null,
    "updated_at": Any<Date>,
  },
  "shipping_total": "0.00 USD",
  "subtotal": "12.00 USD",
}
`;

exports[`medusa-plugin-sendgrid swap created data 1`] = `"12.00 USD"`;

exports[`medusa-plugin-sendgrid swap created data 2`] = `"12.00 USD"`;

exports[`medusa-plugin-sendgrid swap created data 3`] = `"11.25 USD"`;

exports[`medusa-plugin-sendgrid swap received data 1`] = `"12.00 USD"`;

exports[`medusa-plugin-sendgrid swap received data 2`] = `"12.00 USD"`;

exports[`medusa-plugin-sendgrid swap received data 3`] = `"11.25 USD"`;

exports[`medusa-plugin-sendgrid swap shipment created data 1`] = `
Object {
  "additional_total": "16.88 USD",
  "date": Any<String>,
  "email": "test@testson.com",
  "fulfillment": Object {
    "canceled_at": null,
    "claim_order_id": null,
    "created_at": Any<Date>,
    "data": Object {},
    "id": Any<String>,
    "idempotency_key": null,
    "items": Array [
      Object {
        "fulfillment_id": Any<String>,
        "item_id": Any<String>,
        "quantity": 1,
      },
    ],
    "metadata": Object {},
    "no_notification": null,
    "order_id": null,
    "provider_id": "test-ful",
    "shipped_at": Any<Date>,
    "swap_id": Any<String>,
    "tracking_links": Array [],
    "tracking_numbers": Array [],
    "updated_at": Any<Date>,
  },
  "items": Array [
    Object {
      "allow_discounts": true,
      "cart_id": Any<String>,
      "claim_order_id": null,
      "created_at": Any<Date>,
      "description": "Small Wooden Computer",
      "discounted_price": "11.25 USD",
      "fulfilled_quantity": 1,
      "has_shipping": true,
      "id": Any<String>,
      "is_giftcard": false,
      "is_return": false,
      "metadata": Object {},
      "order_id": null,
      "price": "11.25 USD",
      "quantity": 1,
      "returned_quantity": null,
      "shipped_quantity": 1,
      "should_merge": true,
      "swap_id": Any<String>,
      "tax_lines": Array [
        Object {
          "code": "default",
          "created_at": Any<Date>,
          "id": Any<String>,
          "item_id": Any<String>,
          "metadata": null,
          "name": "default",
          "rate": 12.5,
          "updated_at": Any<Date>,
        },
      ],
      "thumbnail": null,
      "title": "Awesome Metal Ball",
      "unit_price": 1000,
      "updated_at": Any<Date>,
      "variant": Object {
        "allow_backorder": false,
        "barcode": null,
        "created_at": Any<Date>,
        "deleted_at": null,
        "ean": null,
        "height": null,
        "hs_code": null,
        "id": "variant-2",
        "inventory_quantity": 9,
        "length": null,
        "manage_inventory": true,
        "material": null,
        "metadata": null,
        "mid_code": null,
        "origin_country": null,
        "product": Object {
          "collection_id": null,
          "created_at": Any<Date>,
          "deleted_at": null,
          "description": null,
          "discountable": true,
          "external_id": null,
          "handle": null,
          "height": null,
          "hs_code": null,
          "id": "test-product",
          "is_giftcard": false,
          "length": null,
          "material": null,
          "metadata": null,
          "mid_code": null,
          "origin_country": null,
          "profile_id": Any<String>,
          "status": "draft",
          "subtitle": null,
          "thumbnail": null,
          "title": "Awesome Metal Ball",
          "type_id": null,
          "updated_at": Any<Date>,
          "weight": null,
          "width": null,
        },
        "product_id": "test-product",
        "sku": null,
        "title": "Small Wooden Computer",
        "upc": null,
        "updated_at": Any<Date>,
        "weight": null,
        "width": null,
      },
      "variant_id": "variant-2",
    },
  ],
  "locale": null,
  "order": Object {
    "beforeInsert": [Function],
    "billing_address_id": null,
    "canceled_at": null,
    "cart_id": null,
    "created_at": Any<Date>,
    "currency_code": "usd",
    "customer_id": Any<String>,
    "discounts": Array [],
    "display_id": Any<Number>,
    "draft_order_id": null,
    "email": "test@testson.com",
    "external_id": null,
    "fulfillment_status": "fulfilled",
    "id": Any<String>,
    "idempotency_key": null,
    "items": Array [
      Object {
        "allow_discounts": true,
        "cart_id": null,
        "claim_order_id": null,
        "created_at": Any<Date>,
        "description": "",
        "fulfilled_quantity": 2,
        "has_shipping": null,
        "id": Any<String>,
        "is_giftcard": false,
        "is_return": false,
        "metadata": null,
        "order_id": Any<String>,
        "quantity": 2,
        "returned_quantity": null,
        "shipped_quantity": 2,
        "should_merge": true,
        "swap_id": null,
        "tax_lines": Array [
          Object {
            "code": "default",
            "created_at": Any<Date>,
            "id": Any<String>,
            "item_id": Any<String>,
            "metadata": null,
            "name": "default",
            "rate": 20,
            "updated_at": Any<Date>,
          },
        ],
        "thumbnail": "",
        "title": "Intelligent Plastic Chips",
        "unit_price": 1000,
        "updated_at": Any<Date>,
        "variant": Object {
          "allow_backorder": false,
          "barcode": null,
          "created_at": Any<Date>,
          "deleted_at": null,
          "ean": null,
          "height": null,
          "hs_code": null,
          "id": "test-variant",
          "inventory_quantity": 9,
          "length": null,
          "manage_inventory": true,
          "material": null,
          "metadata": null,
          "mid_code": null,
          "origin_country": null,
          "product": Object {
            "collection_id": null,
            "created_at": Any<Date>,
            "deleted_at": null,
            "description": null,
            "discountable": true,
            "external_id": null,
            "handle": null,
            "height": null,
            "hs_code": null,
            "id": "test-product",
            "is_giftcard": false,
            "length": null,
            "material": null,
            "metadata": null,
            "mid_code": null,
            "origin_country": null,
            "profile_id": Any<String>,
            "status": "draft",
            "subtitle": null,
            "thumbnail": null,
            "title": "Awesome Metal Ball",
            "type_id": null,
            "updated_at": Any<Date>,
            "weight": null,
            "width": null,
          },
          "product_id": "test-product",
          "sku": null,
          "title": "Practical Granite Pizza",
          "upc": null,
          "updated_at": Any<Date>,
          "weight": null,
          "width": null,
        },
        "variant_id": "test-variant",
      },
    ],
    "metadata": null,
    "no_notification": null,
    "object": "order",
    "payment_status": "captured",
    "region": Object {
      "automatic_taxes": true,
      "created_at": Any<Date>,
      "currency_code": "usd",
      "deleted_at": null,
      "fulfillment_providers": Array [],
      "gift_cards_taxable": true,
      "id": Any<String>,
      "metadata": null,
      "name": "Test region",
      "payment_providers": Array [
        PaymentProvider {
          "id": "test-pay",
          "is_installed": true,
        },
      ],
      "tax_code": null,
      "tax_provider_id": null,
      "tax_rate": 12.5,
      "updated_at": Any<Date>,
    },
    "region_id": "test-region",
    "shipping_address_id": Any<String>,
    "status": "pending",
    "swaps": Array [
      Object {
        "additional_items": Array [
          Object {
            "allow_discounts": true,
            "cart_id": Any<String>,
            "claim_order_id": null,
            "created_at": Any<Date>,
            "description": "Small Wooden Computer",
            "fulfilled_quantity": 1,
            "has_shipping": true,
            "id": Any<String>,
            "is_giftcard": false,
            "is_return": false,
            "metadata": Object {},
            "order_id": null,
            "quantity": 1,
            "returned_quantity": null,
            "shipped_quantity": 1,
            "should_merge": true,
            "swap_id": Any<String>,
            "tax_lines": Array [
              Object {
                "code": "default",
                "created_at": Any<Date>,
                "id": Any<String>,
                "item_id": Any<String>,
                "metadata": null,
                "name": "default",
                "rate": 12.5,
                "updated_at": Any<Date>,
              },
            ],
            "thumbnail": null,
            "title": "Awesome Metal Ball",
            "unit_price": 1000,
            "updated_at": Any<Date>,
            "variant": Object {
              "allow_backorder": false,
              "barcode": null,
              "created_at": Any<Date>,
              "deleted_at": null,
              "ean": null,
              "height": null,
              "hs_code": null,
              "id": "variant-2",
              "inventory_quantity": 9,
              "length": null,
              "manage_inventory": true,
              "material": null,
              "metadata": null,
              "mid_code": null,
              "origin_country": null,
              "product": Object {
                "collection_id": null,
                "created_at": Any<Date>,
                "deleted_at": null,
                "description": null,
                "discountable": true,
                "external_id": null,
                "handle": null,
                "height": null,
                "hs_code": null,
                "id": "test-product",
                "is_giftcard": false,
                "length": null,
                "material": null,
                "metadata": null,
                "mid_code": null,
                "origin_country": null,
                "profile_id": Any<String>,
                "status": "draft",
                "subtitle": null,
                "thumbnail": null,
                "title": "Awesome Metal Ball",
                "type_id": null,
                "updated_at": Any<Date>,
                "weight": null,
                "width": null,
              },
              "product_id": "test-product",
              "sku": null,
              "title": "Small Wooden Computer",
              "upc": null,
              "updated_at": Any<Date>,
              "weight": null,
              "width": null,
            },
            "variant_id": "variant-2",
          },
        ],
        "allow_backorder": true,
        "canceled_at": null,
        "cart_id": Any<String>,
        "confirmed_at": Any<Date>,
        "created_at": Any<Date>,
        "deleted_at": null,
        "difference_due": 488,
        "fulfillment_status": "shipped",
        "id": Any<String>,
        "idempotency_key": Any<String>,
        "metadata": null,
        "no_notification": null,
        "order_id": Any<String>,
        "payment_status": "awaiting",
        "shipping_address_id": Any<String>,
        "updated_at": Any<Date>,
      },
    ],
    "tax_rate": null,
    "updated_at": Any<Date>,
  },
  "paid_total": "4.88 USD",
  "refund_amount": "12.00 USD",
  "return_total": "12.00 USD",
  "swap": Object {
    "additional_items": Array [
      Object {
        "allow_discounts": true,
        "cart_id": Any<String>,
        "claim_order_id": null,
        "created_at": Any<Date>,
        "description": "Small Wooden Computer",
        "fulfilled_quantity": 1,
        "has_shipping": true,
        "id": Any<String>,
        "is_giftcard": false,
        "is_return": false,
        "metadata": Object {},
        "order_id": null,
        "quantity": 1,
        "returned_quantity": null,
        "shipped_quantity": 1,
        "should_merge": true,
        "swap_id": Any<String>,
        "tax_lines": Array [
          Object {
            "code": "default",
            "created_at": Any<Date>,
            "id": Any<String>,
            "item_id": Any<String>,
            "metadata": null,
            "name": "default",
            "rate": 12.5,
            "updated_at": Any<Date>,
          },
        ],
        "thumbnail": null,
        "title": "Awesome Metal Ball",
        "unit_price": 1000,
        "updated_at": Any<Date>,
        "variant": Object {
          "allow_backorder": false,
          "barcode": null,
          "created_at": Any<Date>,
          "deleted_at": null,
          "ean": null,
          "height": null,
          "hs_code": null,
          "id": "variant-2",
          "inventory_quantity": 9,
          "length": null,
          "manage_inventory": true,
          "material": null,
          "metadata": null,
          "mid_code": null,
          "origin_country": null,
          "product": Object {
            "collection_id": null,
            "created_at": Any<Date>,
            "deleted_at": null,
            "description": null,
            "discountable": true,
            "external_id": null,
            "handle": null,
            "height": null,
            "hs_code": null,
            "id": "test-product",
            "is_giftcard": false,
            "length": null,
            "material": null,
            "metadata": null,
            "mid_code": null,
            "origin_country": null,
            "profile_id": Any<String>,
            "status": "draft",
            "subtitle": null,
            "thumbnail": null,
            "title": "Awesome Metal Ball",
            "type_id": null,
            "updated_at": Any<Date>,
            "weight": null,
            "width": null,
          },
          "product_id": "test-product",
          "sku": null,
          "title": "Small Wooden Computer",
          "upc": null,
          "updated_at": Any<Date>,
          "weight": null,
          "width": null,
        },
        "variant_id": "variant-2",
      },
    ],
    "allow_backorder": true,
    "beforeInsert": [Function],
    "canceled_at": null,
    "cart_id": Any<String>,
    "confirmed_at": Any<Date>,
    "created_at": Any<Date>,
    "deleted_at": null,
    "difference_due": 488,
    "fulfillment_status": "shipped",
    "id": Any<String>,
    "idempotency_key": Any<String>,
    "metadata": null,
    "no_notification": null,
    "order_id": Any<String>,
    "payment_status": "awaiting",
    "return_order": Object {
      "claim_order_id": null,
      "created_at": Any<Date>,
      "id": Any<String>,
      "idempotency_key": null,
      "items": Array [
        Object {
          "is_requested": true,
          "item_id": "test-item",
          "metadata": null,
          "note": null,
          "quantity": 1,
          "reason_id": null,
          "received_quantity": null,
          "requested_quantity": 1,
          "return_id": Any<String>,
        },
      ],
      "metadata": null,
      "no_notification": null,
      "order_id": null,
      "received_at": null,
      "refund_amount": 1200,
      "shipping_data": null,
      "status": "requested",
      "swap_id": Any<String>,
      "updated_at": Any<Date>,
    },
    "shipping_address": Object {
      "address_1": "121 W Something St",
      "address_2": null,
      "city": "ville la something",
      "company": null,
      "country_code": null,
      "created_at": Any<Date>,
      "customer_id": null,
      "deleted_at": null,
      "first_name": null,
      "id": Any<String>,
      "last_name": null,
      "metadata": null,
      "phone": "12353245",
      "postal_code": "1234",
      "province": "something",
      "updated_at": Any<Date>,
    },
    "shipping_address_id": Any<String>,
    "shipping_methods": Array [
      Object {
        "cart_id": Any<String>,
        "claim_order_id": null,
        "data": Object {},
        "id": Any<String>,
        "order_id": null,
        "price": 500,
        "return_id": null,
        "shipping_option": Object {
          "admin_only": false,
          "amount": 500,
          "created_at": Any<Date>,
          "data": Object {},
          "deleted_at": null,
          "id": Any<String>,
          "is_return": false,
          "metadata": null,
          "name": "Test Method",
          "price_type": "flat_rate",
          "profile_id": Any<String>,
          "provider_id": "test-ful",
          "region_id": "test-region",
          "updated_at": Any<Date>,
        },
        "shipping_option_id": Any<String>,
        "swap_id": Any<String>,
        "tax_lines": Array [
          Object {
            "code": "default",
            "created_at": Any<Date>,
            "id": Any<String>,
            "metadata": null,
            "name": "default",
            "rate": 12.5,
            "shipping_method_id": Any<String>,
            "updated_at": Any<Date>,
          },
        ],
      },
    ],
    "updated_at": Any<Date>,
  },
  "tax_amount": "-0.12 USD",
  "tracking_links": Array [],
  "tracking_number": "",
}
`;
